--- a/assets/css/ui/basic/_input.scss
+++ b/assets/css/ui/basic/_input.scss
@@ -1,6 +1,6 @@
 .input {
     @extend .fontFamily-helvetica;
-    @extend .c-black;
+    @extend .c-steelDark;
     @extend .fontWeight-normal;
     @extend .border-none;
     @extend .borderRadius-m;
