--- a/assets/templates/appResume/basic/sections/settings.html
+++ b/assets/templates/appResume/basic/sections/settings.html
@@ -3,7 +3,7 @@
     <div onClick={ hide } onUpdate="none" class="button__close" data-color="white"></div>
 
     <div class="{ pos-centered : !app.device.isPhone }">
-        <div class="container content anim anim-bt-soft pt30" data-content="settings" duration-show="m" duration-hide="s">
+        <div class="container content anim anim-bt-ease pt30" data-content="settings" duration-show="m" duration-hide="s">
             <div class="row text-center mb25">
                 <div class="col-xs-24 col-sm-12 transition-s { opacity-50 : !config.get('public') }">
                     <div class="pos-rel aspectRatio-169 mtb-s mlr-m">
