--- a/assets/templates/appResume/premium/root.html
+++ b/assets/templates/appResume/premium/root.html
@@ -33,7 +33,7 @@
 
     $resume = $store.resume.get();
 
-    var mode = app.demo ? app.demo : "edit1ing",
+    var mode = app.demo ? app.demo : "editing",
         config = $store.resume.select("config").deepClone();
 
     config.mode = mode;
