--- a/assets/templates/sections/jqtest/result/jqtest-result-specialties.html
+++ b/assets/templates/sections/jqtest/result/jqtest-result-specialties.html
@@ -1,4 +1,4 @@
-<jqtest-result-specialties class="{ app.device.isPhone ? 'screen notAnim' : 'pos-abs-full section section-hidden zIndex-2' } { showAnim : active }" data-active={ active } data-marquee="specialties">
+<jqtest-result-specialties class="{ app.device.isPhone ? 'screen notAnim' : 'pos-abs-full section section-hidden zIndex-2' } { showAnim : active }" data-open={ active } data-marquee="specialties">
 
     <div class="{ 'overflowX-hidden overflowY-auto h100v' : !app.device.isPhone } text-left">
         <div class="screen__content container">
