--- a/assets/templates/sections/list/resumeItem.html
+++ b/assets/templates/sections/list/resumeItem.html
@@ -4,6 +4,7 @@
         <div class="resume__item__control">
             <div onClick={ onRemove } class="resume__item__control__btn resume__item__control__remove"></div>
             <div onClick={ show.dropMenu } class="resume__item__control__btn resume__item__control__menu"></div>
+            <div onClick={ show.feddback } class="resume__item__control__btn resume__item__control__feedback"></div>
         </div>
         <div class="row">
             <div class="col-xs-5 col-sm-6">
