--- a/assets/templates/sections/overview/jqtest/overviewJqtestContent.html
+++ b/assets/templates/sections/overview/jqtest/overviewJqtestContent.html
@@ -205,7 +205,7 @@
             container: $.content
         });
 
-        $.scroll.scrollTop($$($.root).find("#section").offset().top);
+        //$.scroll.scrollTop($$($.root).find("#section").offset().top);
 
         $.scrollFix.init();
     });
