--- a/assets/templates/sections/stat/resumeStatOffer.html
+++ b/assets/templates/sections/stat/resumeStatOffer.html
@@ -13,12 +13,12 @@
             <div class="row pt-m mb-l">
                 <div class="col-md-12">
                     <div class="plr-xl">
-                        <h3 class="c-yellow pl-xl anim anim-scale anim-delay-xs">Видеть с каких устройств просматривали ваше резюме</h3>
+                        <h3 class="c-yellow pl-xl anim anim-scale anim-delay-xs">Получать обратную связь от потенциальных работадателей и многое другое</h3>
                     </div>
                 </div>
                 <div class="col-md-12">
                     <div class="plr-xl">
-                        <h3 class="c-lime pr-xl anim anim-scale anim-delay-s">Наблюдать сколько уникальных посетителей перешло</h3>
+                        <h3 class="c-lime pr-xl anim anim-scale anim-delay-s">Наблюдать сколько работадателей просмотрели ваше резюме</h3>
                     </div>
                 </div>
             </div>
