--- a/assets/css/sections/list/_resumeItem.scss
+++ b/assets/css/sections/list/_resumeItem.scss
@@ -7,6 +7,7 @@
     @extend .mb-l;
     @extend .borderRadius-xl;
     @include accelerate(true);
+    @extend .whiteSpace-normal;
     box-shadow:5px 8.66px 30px 0 rgba(31,35,37,.078);
     will-change:box-shadow, transform;
     transition:box-shadow .4s, transform .4s;
@@ -90,6 +91,10 @@
         &__menu {
             @include ui-icon(more_v_white, 26px, 26px);
         }
+        &__feedback {
+            @extend .mt60;
+            @include ui-icon(feedback_white, 32px, 32px);
+        }
     }
     &__photo {
         @extend .w60;
@@ -108,6 +113,7 @@
         @extend .mb-xs;
     }
     &__date {
+        @extend .fontSize-16;
         @extend .opacity-70;
         @extend .mb-m;
     }
