--- a/assets/css/states/_color.scss
+++ b/assets/css/states/_color.scss
@@ -7,8 +7,9 @@ $i:0;
         }
     }
 }
-@each $title, $color in (white: $white, blue: $blue, blueLight: $blueLight, blueDark: $blueDark, brown: $brown, red: $red, redDark: $redDark, pink: $pink, orange: $orange, orangeDark: $orangeDark, yellow: $yellow, yellowLight: $yellowLight, violet: $violet, violetLight: $violetLight, green: $green, greenDark: $greenDark, lime: $lime, breeze: $breeze, emerald: $emerald, black: $black, blackDark: $blackDark, blackLight: $blackLight, steel: $steel, steelDark: $steelDark, gray: $gray, grayDark: $grayDark, grayLight: $grayLight, grayLighten: $grayLighten, smoke: $smoke, smokeDark: $smokeDark, snow: $snow){
-    .bg-#{$title} {
+@each $title, $color in (white: $white, blue: $blue, blueLight: $blueLight, blueDark: $blueDark, brown: $brown, red: $red, redDark: $redDark, pink: $pink, orange: $orange, orangeDark: $orangeDark, yellow: $yellow, yellowLight: $yellowLight, violet: $violet, violetLight: $violetLight, green: $green, greenDark: $greenDark, lime: $lime, breeze: $breeze, emerald: $emerald, black: $black, blackDark: $blackDark, blackLight: $blackLight, steel: $steel, steelDark: $steelDark, gray: $gray, grayDark: $grayDark, grayLight: $grayLight, grayLighten: $grayLighten, smoke: $smoke, smokeLight: $smokeLight, smokeDark: $smokeDark, snow: $snow){
+    .bg-#{$title},
+    .text-strike[data-color=#{$title}]:after {
         background-color:$color;
     }
     .bg-#{$title}-transparent {
@@ -268,4 +269,16 @@ $i:0;
 }
 .bg-radial-black {
     background:radial-gradient(rgba($black,.0), $black);
+}
+.bg-gradient-tb-white {
+	background:linear-gradient(to bottom, #fff, rgba(#fff,0));
+}
+.bg-gradient-bt-white {
+	background:linear-gradient(to top, #fff, rgba(#fff,0));
+}
+.bg-gradient-lr-white {
+	background:linear-gradient(to right, #fff, rgba(#fff,0));
+}
+.bg-gradient-rl-white {
+	background:linear-gradient(to left, #fff, rgba(#fff,0));
 }
