--- a/assets/css/states/_text.scss
+++ b/assets/css/states/_text.scss
@@ -51,6 +51,33 @@
     @extend .text-ellipsis;
     @extend .nowrap;
 }
+.text-strike {
+    @extend .pos-rel;
+
+    &:after {
+        @extend .content-empty;
+        @extend .pos-centered-v;
+        @extend .l0;
+        @extend .w100p;
+        @extend .h2px;
+        transform:rotate(-10deg) scale3d(1.1, 1, 1);
+    }
+    &[data-size="xs"]{
+        @extend .h1px;
+    }
+    &[data-size="s"]{
+        @extend .h2px;
+    }
+    &[data-size="m"]{
+        @extend .h3px;
+    }
+    &[data-size="l"]{
+        @extend .h4px;
+    }
+    &[data-size="xl"]{
+        @extend .h5;
+    }
+}
 .textAnliased-auto {
     -webkit-font-smoothing:auto;
 }
