--- a/assets/css/states/_transform.scss
+++ b/assets/css/states/_transform.scss
@@ -23,6 +23,9 @@
 .scale-0 {
     transform:translate3d(0, 0, 0) scale(0);
 }
+.transform-default {
+	transform:translateZ(0);
+}
 .transform-none {
     transform:none;
 }
