--- a/assets/css/ui/basic/_textarea.scss
+++ b/assets/css/ui/basic/_textarea.scss
@@ -1,6 +1,6 @@
 .textarea {
     @extend .fontFamily-roboto;
-    @extend .c-blackDark;
+    @extend .c-steelDark;
     @extend .fontWeight-3;
     @extend .border-none;
     @extend .borderRadius-m;
