--- a/assets/templates/sections/profile/profile.html
+++ b/assets/templates/sections/profile/profile.html
@@ -5,69 +5,74 @@
     </div>
 
     <div class="oScreen__content bg-white">
-        <div class="container">
-            <div class="row profile__header">
-                <div class="col-md-16">
-                    <div class="row">
-                        <div class="col-md-10">
-                            <div if={ $account.get('photo') } class="profile__photo">
-                                <div class="profile__photo__image" style="background-image:url({ $account.get('photo') })"></div>
-                            </div>
-                            <div if={ !$account.get('photo') } class="profile__photo" data-place="true">
-                                <span class="profile__photo__text">загрузить свою фотографию</span>
-                            </div>
-                        </div>
-                        <div class="col-md-14">
-                            <div class="profile__personal__data fontSize-22 pt-l">
-                                <div class="fontSize-34 mb-m">
-                                    <span class="c-blue fontWeight-bold">{ $account.get('name') }</span> { $account.get('surname') }
+        <div class="profile">
+            <div class="container">
+                <div class="row profile__header">
+                    <div class="col-md-16">
+                        <div class="row">
+                            <div class="col-md-10">
+                                <div if={ $account.get('photo') } class="profile__photo">
+                                    <div class="profile__photo__image" style="background-image:url({ $account.get('photo') })"></div>
                                 </div>
-                                <div if={ $account.get('gender') == "male" } class="text-uppercase fontSize-20">муж.</div>
-                                <div if={ $account.get('gender') == "female" } class="text-uppercase fontSize-20">жен.</div>
-                                <div if={ $account.get('contacts', 'city') }>{ $account.get('contacts', 'city') }</div>
-                                <span class="display-inlineBlock link-underline link-default-hover-warning mt-xs">Изменить персональные данные</span>
+                                <div if={ !$account.get('photo') } class="profile__photo" data-place="true">
+                                    <span class="profile__photo__text">загрузить свою фотографию</span>
+                                </div>
+                            </div>
+                            <div class="col-md-14">
+                                <div class="profile__personal__data fontSize-22 pt-l">
+                                    <div class="fontSize-34 mb-m">
+                                        <span class="c-blue fontWeight-bold">{ $account.get('name') }</span> { $account.get('surname') }
+                                    </div>
+                                    <div if={ $account.get('gender') == "male" } class="text-uppercase fontSize-20">муж.</div>
+                                    <div if={ $account.get('gender') == "female" } class="text-uppercase fontSize-20">жен.</div>
+                                    <div if={ $account.get('contacts', 'city') }>{ $account.get('contacts', 'city') }</div>
+                                    <span onClick={ open.personalData } onUpdate="none" class="display-inlineBlock link-underline link-default-hover-warning mt-xs">Изменить персональные данные</span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-8">
-                    <div class="profile__column__right fontSize-20 pt45">
-                        <div class="fontSize-28 mb-s">Ваш тариф: <span class="c-blue fontWeight-bold">Free</span></div>
-                        <div>
-                            <span class="link-underline link-default-hover-warning">Сменить тариф</span>
+                    <div class="col-md-8">
+                        <div class="profile__column__right fontSize-20 pt45">
+                            <div class="fontSize-28 mb-s">Ваш тариф: <span class="c-blue fontWeight-bold text-capitalize">{ $account.get('plan') }</span></div>
+                            <div if={ $account.get('plan') != "premium" }>
+                                <span onClick={ open.changePlan } onUpdate="none" class="link-underline link-default-hover-warning">Сменить тариф</span>
+                            </div>
+                            <div class="mt-xxs">
+                                <span class="link-underline link-default-hover-warning">Сменить пароль</span>
+                            </div>
+                            <div class="mt-xxs">
+                                <span class="link-underline link-default-hover-warning">Пополнить баланс</span>
+                            </div>
+                            <div class="c-gray mt-s">Последний визит: сегодня в 3:17</div>
                         </div>
-                        <div class="mt-xxs">
-                            <span class="link-underline link-default-hover-warning">Сменить пароль</span>
+                    </div>
+                </div>
+                <div class="row pt-l">
+                    <div class="col-md-8">
+                        <div class="title c-gray fontWeight-bold fontSize-28 mb-m opacity-80" data-icon="phone">
+                            Номер телефона
                         </div>
-                        <div class="c-gray mt-s">Последний визит: сегодня в 3:17</div>
+                        <div class="c-gray fontSize-14 text-uppercase mb-xss">Основной:</div>
+                        <div class="fontSize-22 fontWeight-bold mb-m">{ $account.get('contacts', 'phone') }</div>
+                        <button class="btn btn-edit btn-m btn-default-hover-warning">Изменить</button>
                     </div>
-                </div>
-            </div>
-            <div class="row pt-l">
-                <div class="col-md-8">
-                    <div class="title c-gray fontWeight-bold fontSize-28 mb-m opacity-80" data-icon="phone">
-                        Номер телефона
+                    <div class="col-md-8">
+                        <div class="title c-gray fontWeight-bold fontSize-28 mb-m opacity-80" data-icon="phone">
+                            Электронная почта
+                        </div>
+                        <div class="c-gray fontSize-14 text-uppercase mb-xss">Основная:</div>
+                        <div class="mb-m">
+                            <span class="fontSize-22 link-underline link-default-hover-warning">{ $account.get('contacts', 'email') }</span>
+                        </div>
+                        <button class="btn btn-edit btn-m btn-default-hover-warning">Изменить</button>
                     </div>
-                    <div class="c-gray fontSize-14 text-uppercase mb-xss">Основной:</div>
-                    <div class="fontSize-22 fontWeight-bold mb-m">{ $account.get('contacts', 'phone') }</div>
-                    <button class="btn btn-m btn-default-hover-warning">Изменить</button>
-                </div>
-                <div class="col-md-8">
-                    <div class="title c-gray fontWeight-bold fontSize-28 mb-m opacity-80" data-icon="phone">
-                        Электронная почта
+                    <div class="col-md-8">
+                        <div class="title c-gray fontWeight-bold fontSize-28 mb30 opacity-80" data-icon="phone">
+                            Ваш баланс
+                        </div>
+                        <div class="{ parseInt($account.get('balance')) < 100 ? 'c-blackLight' : 'c-green' } fontSize-34 fontWeight-8 mb-m">{ _.numberFormat($account.get('balance'), 1, ",", ",") } ₽</div>
+                        <button class="btn btn-balance btn-l btn-success">Пополнить</button>
                     </div>
-                    <div class="c-gray fontSize-14 text-uppercase mb-xss">Основная:</div>
-                    <div class="mb-m">
-                        <span class="fontSize-22 link-underline link-default-hover-warning">{ $account.get('contacts', 'email') }</span>
-                    </div>
-                    <button class="btn btn-m btn-default-hover-warning">Изменить</button>
-                </div>
-                <div class="col-md-8">
-                    <div class="title c-gray fontWeight-bold fontSize-28 mb35 opacity-80" data-icon="phone">
-                        Ваш баланс
-                    </div>
-                    <div class="fontSize-34 fontWeight-8 mb-m">{ $account.get('balance') } ₽</div>
-                    <button class="btn btn-m btn-default-hover-success">Пополнить</button>
                 </div>
             </div>
         </div>
@@ -75,13 +80,17 @@
 
 <script>
 
-    var $ = this;
+    var $ = this,
+    $scope = $$($.root);
 
     $.active = false;
 
     $.on("mount", function(){
-        $afterlag.run(function(){
-            $.show();
+        $scope.on('swipeleft', function(){
+            $.hide();
+        });
+        $account.on("write", function(){
+            $.update();
         });
     });
 
@@ -90,6 +99,15 @@
             active: true
         })
         $.callback = callback;
+    };
+
+    $.open = {
+        personalData: function(){
+            $Sections.profile.data.show();
+        },
+        changePlan: function(){
+            $Sections.payment.section.show("premium");
+        }
     };
 
     $.hide = function(){
